--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,5 +89,6 @@
   "workbench.statusBar.visible": false,
   "workbench.tips.enabled": false,
   "workbench.tree.renderIndentGuides": "none",
-  "zenMode.centerLayout": false
+  "zenMode.centerLayout": false,
+  "terminal.integrated.gpuAcceleration": "off"
 }
